--- a/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
+++ b/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
@@ -1,19 +1,142 @@
 <template>
 	<div class="homeCard" style="border-top :  3px solid #9602c7">
-		<div class="childparent" >
-           <div class="childtext" style="padding-left: 20px;">
-   
-          <lightning-icon icon-name="action:manage_perm_sets" size="small" alternative-text="Internal" title="Internal">  </lightning-icon>
-           <font size="4"  > &nbsp;&nbsp;<b>My Pending Approvals </b> </font>
-            
-           </div>
-            <div class="childimage">
-           
-            </div>
-        </div>
+		<div class="childparent">
+			<div class="childtext" style="padding-left: 20px;">
+
+				<lightning-icon icon-name="action:manage_perm_sets" size="small" alternative-text="Internal"
+					title="Internal"> </lightning-icon>
+				<font size="4"> &nbsp;&nbsp;<b>My Pending Approvals </b> </font>
+
+			</div>
+			<div class="childimage">
+
+			</div>
+		</div>
 		<div style="padding:10px;">
-			<c-e-m-s-_-leave-request-_-table leave-req={reqLeaveArray}>
-			</c-e-m-s-_-leave-request-_-table>
+			<!--c-e-m-s-_-leave-request-_-table leave-req={reqLeaveArray}>
+			</c-e-m-s-_-leave-request-_-table-->
+			<center>
+				<div class="table-container">
+					<table>
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Date</th>
+								<th>No of Days</th>
+								<th>Actions</th>
+							</tr>
+						</thead>
+						<tbody>
+							<template for:each={reqLeaveArray} for:item="leave">
+								<tr key={leave.id}>
+									<td>{leave.EMS_LM_Contact__r.LastName}</td>
+									<td key={leave.Id}>
+										<lightning-formatted-date-time value={leave.EMS_LM_Leave_Start_Date__c}
+											month="numeric" day="numeric" year="numeric">
+										</lightning-formatted-date-time> -
+										<lightning-formatted-date-time value={leave.EMS_LM_Leave_End_Date__c}
+											month="numeric" day="numeric" year="numeric">
+										</lightning-formatted-date-time>
+									</td>
+									<td>{leave.EMS_LM_Leave_Duration__c}</td>
+									<td>
+										<lightning-button-icon icon-name='action:approval' variant="brand"
+											alternative-text='approval' size='x-small' title='approval'
+											data-key={leave.Id} onclick={showModalApprovalBox}></lightning-button-icon>
+										&nbsp;
+										<lightning-button-icon icon-name='action:close' alternative-text='close'
+											variant="brand" size='x-small' title='close' data-key={leave.Id}
+											onclick={showModalRejectBox}>
+										</lightning-button-icon>
+									</td>
+
+									<!-- APPROVE POP-UP-->
+									<template if:true={isShowModalApprove}>
+										<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01"
+											aria-modal="true" aria-describedby="modal-content-id-1"
+											class="slds-modal slds-fade-in-open">
+											<div class="slds-modal__container">
+												<!-- modal header start -->
+												<header class="slds-modal__header">
+													<h2 id="modal-heading-01"
+														class="slds-text-heading_medium slds-hyphenate">
+														Confirmation</h2>
+												</header>
+
+												<!-- modal body start -->
+												<div class="slds-modal__content slds-p-around_medium"
+													id="modal-content-id-1">
+													<p style="font-size:20px;">Please Enter the Approve Comments</p><br>
+													<lightning-textarea name="input" required value=""
+														placeholder="Type comments here..." label="Comments"
+														maxlength="140"
+														message-when-too-long="A maximum of 140 characters are allowed."
+														message-when-value-missing="Please add comments."
+														onchange={handleApproveComments}></lightning-textarea>
+												</div>
+
+												<!-- modal footer start-->
+												<footer class="slds-modal__footer">
+
+													<button class="slds-button slds-button_neutral" onclick={handleClose}
+										data-id={leave.Id}>Cancel</button>
+													<button class="slds-button slds-button_neutral" onclick={handleApproveSave}
+										data-id={leave.Id}>Save</button>
+												</footer>
+
+											</div>
+										</section>
+										<div key={leave.Id} class="slds-backdrop slds-backdrop_open"></div>
+									</template>
+									<!-- REJECT POP-UP-->
+									<template if:true={isShowModalReject}>
+										<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-02"
+											aria-modal="true" aria-describedby="modal-content-id-1"
+											class="slds-modal slds-fade-in-open">
+											<div class="slds-modal__container">
+												<!-- modal header start -->
+												<header class="slds-modal__header">
+													<h2 id="modal-heading-02"
+														class="slds-text-heading_medium slds-hyphenate">
+														Confirmation</h2>
+												</header>
+
+												<!-- modal body start -->
+												<div class="slds-modal__content slds-p-around_medium"
+													id="modal-content-id-2">
+													<p style="font-size:20px;">Please Enter the Reject Comments</p><br>
+													<lightning-textarea name="input" required value={rejectComments}
+														placeholder="Type comments here..." label="Comments"
+														maxlength="140"
+														message-when-too-long="A maximum of 140 characters are allowed."
+														message-when-value-missing="Please add comments."
+														onchange={handleRejectComments} class="isRequired"
+														data-id="validateValue">
+													</lightning-textarea>
+												</div>
+
+												<!-- modal footer start-->
+												<footer class="slds-modal__footer">
+
+													<button class="slds-button slds-button_neutral" onclick={handleClose}
+										data-id={leave.Id}>Cancel</button>
+													<button class="slds-button slds-button_neutral" onclick={handleRejectSave}
+										data-id={leave.Id}>Save</button>
+												</footer>
+											</div>
+										</section>
+										<div key={leave.Id} class="slds-backdrop slds-backdrop_open"></div>
+									</template>
+								</tr>
+							</template>
+						</tbody>
+					</table>
+					<template if:true={nodata}>
+						<h2> No requests found
+						</h2>
+					</template>
+				</div>
+			</center>
 		</div>
 	</div>
 </template>
