--- a/force-app/main/default/lwc/gridHomePage/gridHomePage.html
+++ b/force-app/main/default/lwc/gridHomePage/gridHomePage.html
@@ -10,6 +10,7 @@
 			<template if:true={hidePendingTab}>
 			<c-recent-request-tile></c-recent-request-tile>
 			</template>
+			<c-my-certifications-and-skills></c-my-certifications-and-skills>
 		</div>
 		<div class="slds-col slds-size_1-of-2">
 			<c-leave-management-_-tile> </c-leave-management-_-tile>
