--- a/force-app/main/default/lwc/onboardingProcessForEmployee/onboardingProcessForEmployee.html
+++ b/force-app/main/default/lwc/onboardingProcessForEmployee/onboardingProcessForEmployee.html
@@ -478,30 +478,30 @@
                                                     <h3 class="slds-section__title slds-theme_shade">
                                                         <p>Current Address</p>
                                                     </h3>
-                                                    <lightning-input class="slds-p-top_small" value={cadrressline1}
-                                                        disabled={readonlyfield} required onchange={currentadrressline1}
+                                                    <lightning-input class="slds-p-top_small addressClass" value={cadrressline1}
+                                                        disabled={readonlyfield} required onchange={handleChange}
                                                         name="EMS_EM_CAddress_Line_1__c" type="text"
                                                         label="Address Line 1"></lightning-input>
                                                     <lightning-input class="slds-p-top_small" value={cadrressline2}
-                                                        disabled={readonlyfield} onchange={currentadrressline2}
+                                                        disabled={readonlyfield} onchange={handleChange}
                                                         name="EMS_EM_CAddress_Line_2__c" type="text"
                                                         label="Address Line 2"></lightning-input>
-                                                    <lightning-input class="slds-p-top_small" value={castate}
+                                                    <lightning-input class="slds-p-top_small addressClass" value={castate}
                                                         onkeydown={handleFirstLastNameKeyDown}
                                                         message-when-pattern-mismatch="Invalid State"
                                                         pattern="[A-Z a-z._-]{2,20}$" disabled={readonlyfield} required
-                                                        onchange={CAState} name="EMS_EM_CA_State__c" type="text"
+                                                        onchange={handleChange} name="EMS_EM_CA_State__c" type="text"
                                                         label="State"></lightning-input>
-                                                    <lightning-input class="slds-p-top_small" value={cacity}
+                                                    <lightning-input class="slds-p-top_small addressClass" value={cacity}
                                                         onkeydown={handleFirstLastNameKeyDown}
                                                         message-when-pattern-mismatch="Invalid City"
                                                         pattern="[A-Z a-z._-]{2,20}$" disabled={readonlyfield} required
-                                                        onchange={CACity} name="EMS_EM_CA_City__c" type="text"
+                                                        onchange={handleChange} name="EMS_EM_CA_City__c" type="text"
                                                         label="City"></lightning-input>
-                                                    <lightning-input class="slds-p-top_small" value={cazip}
+                                                    <lightning-input class="slds-p-top_small addressClass" value={cazip}
                                                         pattern="[0-9]{6}$" onkeydown={handleAadharNumberKeyDown}
                                                         message-when-pattern-mismatch="Invalid Zip"
-                                                        disabled={readonlyfield} required onchange={CAZip}
+                                                        disabled={readonlyfield} required onchange={handleChange}
                                                         name="EMS_EM_CA_Zip__c" type="text"
                                                         label="Zip"></lightning-input>
                                                     <br>
@@ -510,9 +510,9 @@
                                                             Permanent Address Same as Current Address?
                                                         </div>
                                                         <div class="slds-col slds-size_1-of-12">
-                                                            <lightning-input type="Checkbox" disabled={readonlyfield}
-                                                        
-                                                                value={inputcheckboxValue}
+                                                            <lightning-input type="Checkbox" disabled={disableFlag}
+                                                            checked={paFlag}
+                                                                
                                                                 onchange={AddressCheckboxChange}></lightning-input>
                                                         </div>
                                                     </div>
@@ -525,28 +525,28 @@
                                                     </h3>
                                                     <lightning-input class="slds-p-top_small" value={padrressline1}
                                                         disabled={readonlyfield} required
-                                                        onchange={permanentadrressline1}
+                                                        onchange={handleChange}
                                                         name="EMS_EM_PAddress_Line_1__c" type="text"
                                                         label="Address Line 1"></lightning-input>
                                                     <lightning-input class="slds-p-top_small" value={padrressline2}
-                                                        disabled={readonlyfield} onchange={permanentadrressline2}
+                                                        disabled={readonlyfield} onchange={handleChange}
                                                         name="EMS_EM_PAddress_Line_2__c" type="text"
                                                         label="Address Line 2"></lightning-input>
                                                     <lightning-input class="slds-p-top_small" value={pastate}
                                                         onkeydown={handleFirstLastNameKeyDown}
                                                         pattern="[A-Z a-z._-]{2,20}$" disabled={readonlyfield} required
-                                                        message-when-pattern-mismatch="Invalid State" onchange={PAState}
+                                                        message-when-pattern-mismatch="Invalid State" onchange={handleChange}
                                                         name="EMS_EM_PA_State__c;" type="text"
                                                         label="State"></lightning-input>
                                                     <lightning-input class="slds-p-top_small" value={pacity}
                                                         onkeydown={handleFirstLastNameKeyDown}
                                                         pattern="[A-Z a-z._-]{2,20}$" disabled={readonlyfield} required
-                                                        message-when-pattern-mismatch="Invalid City" onchange={PACity}
+                                                        message-when-pattern-mismatch="Invalid City" onchange={handleChange}
                                                         name="EMS_EM_PA_City__c" type="text"
                                                         label="City"></lightning-input>
                                                     <lightning-input class="slds-p-top_small" value={pazip}
                                                         pattern="[0-9]{6}$" onkeydown={handleAadharNumberKeyDown}
-                                                        disabled={readonlyfield} onchange={PAZip}
+                                                        disabled={readonlyfield} onchange={handleChange}
                                                         message-when-pattern-mismatch="Invalid Zip" required
                                                         name="EMS_EM_PA_Zip__c" type="text"
                                                         label="Zip"></lightning-input>
@@ -740,7 +740,7 @@
                                             <div class="slds-col" style="padding-left: 25px;">
                                                 <span>
                                                     <lightning-input type="checkbox" name="Do_you_have_a_vehicle__c" disabled={readonlyfield}
-                                                        label="Do you have a vehicle?" value={checkboxValue}
+                                                        label="Do you have a vehicle?" checked={checkboxValue}
                                                         onchange={doyouhaveavehicle}></lightning-input>
                                                         <br><br>
 
