--- a/force-app/main/default/lwc/leaveReqViewForm/leaveReqViewForm.html
+++ b/force-app/main/default/lwc/leaveReqViewForm/leaveReqViewForm.html
@@ -15,12 +15,13 @@
 				</div>
 				<div class="slds-col slds-size_6-of-12">
 					<lightning-output-field field-name="EMS_LM_Approver__c"></lightning-output-field>
-					<lightning-output-field field-name="Approver_1_Approved_Comments__c"></lightning-output-field>
+					<lightning-output-field field-name="Approver_1_Approved_Comments__c"></lightning-output-field><br/>
 					<lightning-output-field field-name="EMS_LM_2nd_Approver__c"></lightning-output-field>
-					<lightning-output-field field-name="Approver_2_Approved_Comments__c"></lightning-output-field>
+					<lightning-output-field field-name="Approver_2_Approved_Comments__c"></lightning-output-field><br/>
 					<lightning-output-field field-name="EMS_LM_Current_Approver__c"></lightning-output-field>
-					<lightning-output-field field-name="EMS_LM_Remarks__c"></lightning-output-field>
+					<lightning-output-field field-name="EMS_LM_Remarks__c"></lightning-output-field><br/>
 					<lightning-output-field field-name="EMS_LM_Approved_On__c"></lightning-output-field>
+                    <lightning-output-field field-name="LastModifiedById"></lightning-output-field>
 				</div>
 			</div>
 		</lightning-record-view-form>
