--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
@@ -71,8 +71,8 @@
 							<tr style="border-top:0.5px solid #d4d4d4;border-bottom:0.5px solid #d4d4d4">
 								<th style="padding:8px">
 									<div>
-										<lightning-input type="checkbox" variant="standard" label="Select All"
-											onclick={handleSelectAll}></lightning-input>
+										<lightning-input type="checkbox" variant="standard" onclick={handleSelectAll}>
+										</lightning-input>
 									</div>
 								</th>
 								<th>
@@ -97,10 +97,10 @@
 									<div title="Leave Status">Leave Status</div>
 								</th>
 								<th>
-									<div title="Approver">Approved By</div>
+									<div title="Approved By">Approved By</div>
 								</th>
 								<th>
-									<div title="Approved On">Approved On</div>
+									<div title="Approval/Rejection Date">Approved On</div>
 								</th>
 								<th class="slds-cell_action-mode" style="width:2.25rem">
 									<div>Actions</div>
@@ -115,51 +115,51 @@
 										<input type="checkbox" id="checkbox-unique-id-81" name="label" onchange={handleSelect} data-id={Req.Id} data-record-id={Req.id}/>
                 					</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											{Req.EMS_LM_Contact__r.Name}</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											{Req.EMS_LM_Leave_Type_Name__c }</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											<lightning-formatted-date-time value={Req.EMS_LM_Leave_Start_Date__c}
 												month="numeric" day="numeric" year="numeric">
 											</lightning-formatted-date-time>
 										</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											<lightning-formatted-date-time value={Req.EMS_LM_Leave_End_Date__c}
 												month="numeric" day="numeric" year="numeric">
 											</lightning-formatted-date-time>
 										</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											{Req.EMS_LM_Leave_Duration__c}</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											{Req.EMS_LM_Reason__c}</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											{Req.EMS_LM_Status__c}</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											{Req.EMS_LM_Current_Approver__c}</div>
 									</td>
 									<td>
-										<div class="slds-truncate dv-dynamic-width">
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 											<lightning-formatted-date-time value={Req.EMS_LM_Approved_On__c}
 												month="numeric" day="numeric" year="numeric">
 											</lightning-formatted-date-time>
 										</div>
 									</td>
-									<td class="slds-truncate dv-dynamic-width">
+									<td class="slds-truncate dv-dynamic-width" style={fixedWidth}>
 										<lightning-button-icon variant="brand" size="large" icon-name="action:approval"
 											alternative-text="Approve" onclick={showModalApprovalBox}
 											data-value={Req.EMS_LM_Status__c} key-field={Req.Id} data-record-id={Req.Id}
