--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.html
@@ -102,7 +102,7 @@
 								<template for:each={datahistory} for:item="Req">
 									<tr key={Req.Id} style="border-bottom:0.5px solid #d4d4d4">
 										<td style="padding:7px">
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												<input type="checkbox" id="checkbox-unique-id-81" name="label" onchange={handleSelect} data-id={Req.Id} data-record-id={Req.id} disabled ={Req.disableButton}/>
 									</div>
 										</td>
