--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.html
@@ -26,7 +26,8 @@
 				</tbody>
 			</table>
 			<template if:true={nodata}>
-				<h2> No Leave Requests </h2>
+				<h2> No requests found
+				</h2>
 			</template>
 		</div>
 	</center>
