--- a/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
+++ b/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
@@ -1,20 +1,19 @@
 <template>
-	<div class="homeCard" style="border-top :  3px solid #9602c7">
-		<div class="childparent">
-			<div class="childtext" style="padding-left: 20px;">
+	<div class="homeCard" style="border-top : 3px solid #9602c7;">
+		<lightning-card>
+			<div class="childparent">
+				<div class="childtext" style="padding-left:20px;">
+					<div style="padding-left:5px;">
+						<lightning-icon icon-name="action:manage_perm_sets" size="small" alternative-text="Internal"
+							title="Internal"> </lightning-icon>
+						<font size="4"> &nbsp;&nbsp;<b>My Pending Approvals </b> </font>
+					</div>
+				</div>
+				<div class="childimage">
 
-				<lightning-icon icon-name="action:manage_perm_sets" size="small" alternative-text="Internal"
-					title="Internal"> </lightning-icon>
-				<font size="4"> &nbsp;&nbsp;<b>My Pending Approvals </b> </font>
-
+				</div>
 			</div>
-			<div class="childimage">
-
-			</div>
-		</div>
-		<div style="padding:10px;">
-			<!--c-e-m-s-_-leave-request-_-table leave-req={reqLeaveArray}>
-			</c-e-m-s-_-leave-request-_-table-->
+			<br/>
 			<center>
 				<div class="table-container">
 					<table>
@@ -50,7 +49,8 @@
 										<lightning-button-icon variant="brand" size="x-small" icon-name="action:reject"
 											alternative-text="Reject" onclick={showModalRejectBox}
 											data-value={leave.EMS_LM_Status__c} key-field={leave.Id}
-											data-record-id={leave.Id} data-id={leave.Id}> </lightning-button-icon>
+											data-record-id={leave.Id} data-id={leave.Id}>
+										</lightning-button-icon>
 										<!--lightning-button-icon icon-name='action:approval' variant="brand"
 											alternative-text='Approve' size='x-small' title='Approve' data-id={leave.Id}
 											key-field={leave.Id} data-record-id={leave.Id}
@@ -61,107 +61,93 @@
 											key-field={leave.Id} data-record-id={leave.Id} onclick={showModalRejectBox}>
 											</lightning-button-icon-->
 									</td>
-
-
-
-									<!-- APPROVE  POP-UP-->
-									<template if:true={isShowModalApprove}>
-										<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-03"
-											aria-modal="true" aria-describedby="modal-content-id-1"
-											class="slds-modal slds-fade-in-open">
-											<div class="slds-modal__container">
-												<!-- modal header start -->
-												<header class="slds-modal__header">
-													<h2 id="modal-heading-03"
-														class="slds-text-heading_medium slds-hyphenate">
-														Confirmation</h2>
-												</header>
-
-												<!-- modal body start -->
-												<div class="slds-modal__content slds-p-around_medium"
-													id="modal-content-id-3">
-													<p style="font-size:20px;">Please Enter the Approve Comments</p><br>
-													<lightning-textarea name="input" required value=""
-														placeholder="Type comments here..." label="Comments"
-														maxlength="140"
-														message-when-too-long="A maximum of 140 characters are allowed."
-														message-when-value-missing="Please add comments."
-														onchange={handleApproveComments}>
-													</lightning-textarea>
-												</div>
-
-												<!-- modal footer start-->
-												<footer class="slds-modal__footer">
-
-													<button class="slds-button slds-button_neutral" onclick={handleCloseAll}
-										>Cancel</button>
-													<button class="slds-button slds-button_neutral" onclick={handleApproveSave}
-										>Save</button>
-												</footer>
-											</div>
-										</section>
-										<div key={leave.Id} class="slds-backdrop slds-backdrop_open"></div>
-									</template>
-									<!-- REJECT  POP-UP-->
-									<template if:true={isShowModalReject}>
-										<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-02"
-											aria-modal="true" aria-describedby="modal-content-id-1"
-											class="slds-modal slds-fade-in-open">
-											<div class="slds-modal__container">
-												<!-- modal header start -->
-												<header class="slds-modal__header">
-													<h2 id="modal-heading-04"
-														class="slds-text-heading_medium slds-hyphenate">
-														Confirmation</h2>
-												</header>
-
-												<!-- modal body start -->
-												<div class="slds-modal__content slds-p-around_medium"
-													id="modal-content-id-4">
-													<p style="font-size:20px;">Please Enter the Reject Comments</p><br>
-													<lightning-textarea name="input" required value={rejectComments}
-														placeholder="Type comments here..." label="Comments"
-														maxlength="140"
-														message-when-too-long="A maximum of 140 characters are allowed."
-														message-when-value-missing="Please add comments."
-														onchange={handleRejectComments} class="isRequired"
-														data-id="validateValue">
-													</lightning-textarea>
-												</div>
-
-												<!-- modal footer start-->
-												<footer class="slds-modal__footer">
-
-													<button class="slds-button slds-button_neutral" onclick={handleCloseAll}
-										>Cancel</button>
-													<button class="slds-button slds-button_neutral" onclick={handleRejectSave}
-										>Save</button>
-												</footer>
-											</div>
-										</section>
-										<div key={leave.Id} class="slds-backdrop slds-backdrop_open"></div>
-									</template>
 								</tr>
 							</template>
 						</tbody>
 					</table>
-					<template if:true={nodata}>
-						<h2> No requests found
-						</h2>
-					</template>
-					<center>
-						<div style="width:100%">
-							<footer class="slds-modal__footer">
-								<!---->
-
-								<center> <a href="#" onclick={handleLMNavigation}> View All Request</a> </center>
-								<!--	 -->
-							</footer>
-
-						</div>
-					</center>
 				</div>
 			</center>
-		</div>
+			<template if:true={nodata}>
+				<center> No requests found
+				</center>
+			</template>
+			<footer class="slds-modal__footer">
+				<center> <a href="#">
+						<font class="uiOutputText" onclick={handleLMNavigation}>View All Request</font>
+					</a> </center>
+
+			</footer>
+
+			<!-- APPROVE  POP-UP-->
+			<template if:true={isShowModalApprove}>
+				<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-03" aria-modal="true"
+					aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+					<div class="slds-modal__container">
+						<!-- modal header start -->
+						<header class="slds-modal__header">
+							<h2 id="modal-heading-03" class="slds-text-heading_medium slds-hyphenate">
+								Confirmation</h2>
+						</header>
+
+						<!-- modal body start -->
+						<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-3">
+							<p style="font-size:20px;">Please Enter the Approve Comments</p>
+							<br>
+							<lightning-textarea name="input" required value="" placeholder="Type comments here..."
+								label="Comments" maxlength="140"
+								message-when-too-long="A maximum of 140 characters are allowed."
+								message-when-value-missing="Please add comments." onchange={handleApproveComments}>
+							</lightning-textarea>
+						</div>
+
+						<!-- modal footer start-->
+						<footer class="slds-modal__footer">
+
+							<button class="slds-button slds-button_neutral" onclick={handleCloseAll}
+										>Cancel</button>
+							<button class="slds-button slds-button_neutral" onclick={handleApproveSave}
+										>Save</button>
+						</footer>
+					</div>
+				</section>
+				<div class="slds-backdrop slds-backdrop_open"></div>
+			</template>
+			<!-- REJECT  POP-UP-->
+			<template if:true={isShowModalReject}>
+				<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-02" aria-modal="true"
+					aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+					<div class="slds-modal__container">
+						<!-- modal header start -->
+						<header class="slds-modal__header">
+							<h2 id="modal-heading-04" class="slds-text-heading_medium slds-hyphenate">
+								Confirmation</h2>
+						</header>
+
+						<!-- modal body start -->
+						<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-4">
+							<p style="font-size:20px;">Please Enter the Reject Comments</p>
+							<br>
+							<lightning-textarea name="input" required value={rejectComments}
+								placeholder="Type comments here..." label="Comments" maxlength="140"
+								message-when-too-long="A maximum of 140 characters are allowed."
+								message-when-value-missing="Please add comments." onchange={handleRejectComments}
+								class="isRequired" data-id="validateValue">
+							</lightning-textarea>
+						</div>
+
+						<!-- modal footer start-->
+						<footer class="slds-modal__footer">
+
+							<button class="slds-button slds-button_neutral" onclick={handleCloseAll}
+										>Cancel</button>
+							<button class="slds-button slds-button_neutral" onclick={handleRejectSave}
+										>Save</button>
+						</footer>
+					</div>
+				</section>
+				<div class="slds-backdrop slds-backdrop_open"></div>
+			</template>
+
+		</lightning-card>
 	</div>
 </template>
