--- a/force-app/main/default/lwc/eMS_LM_AllLeaveHistory/eMS_LM_AllLeaveHistory.html
+++ b/force-app/main/default/lwc/eMS_LM_AllLeaveHistory/eMS_LM_AllLeaveHistory.html
@@ -72,7 +72,7 @@
 									<div title="Approved By">Approved By</div>
 								</th>
 								<th>
-									<div title="Approval/Rejection Date">Approved On</div>
+									<div title="Approved On">Approved On</div>
 								</th>
 								<th>
 									<div title="Actions">Actions</div>
