--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.html
@@ -185,7 +185,7 @@
 						<!-- modal body start -->
 						<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
 							<p style="font-size:20px;">Please Enter the Approve Comments</p><br>
-							<lightning-textarea name="input" required value="" placeholder="Type comments here..."
+							<lightning-textarea name="input" placeholder="Type comments here..."
 								label="Comments" maxlength="140"
 								message-when-too-long="A maximum of 140 characters are allowed."
 								message-when-value-missing="Please add comments." onchange={handleApproveAllComments}>
