--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
@@ -18,11 +18,11 @@
 				</template>
 			</div>
 			<div slot="actions">
-				<lightning-button variant="success" label="Approve All" title="Approve All" onclick={handleApproveAll}
+				<lightning-button variant="success" label="Approve All" onclick={handleApproveAll}
 					disabled={disableButton}>
 				</lightning-button>
 				&nbsp;&nbsp;
-				<lightning-button variant="destructive" label="Reject All" title="Reject All" onclick={handleRejectAll}
+				<lightning-button variant="destructive" label="Reject All" onclick={handleRejectAll}
 					disabled={disableButton}>
 				</lightning-button>
 			</div>
@@ -113,7 +113,7 @@
 									style="border-top:0.5px solid #d4d4d4;border-bottom:0.5px solid #d4d4d4">
 									<td style="padding:8px">
 										<div class="slds-truncate dv-dynamic-width">
-											<input type="checkbox" id="checkbox-unique-id-81" name="label" onchange={handleSelect} data-id={Req.Id} data-record-id={Req.id}/>
+											<input type="checkbox" id="checkbox-unique-id-81" name="label" onchange={handleSelect} data-id={Req.Id} data-record-id={Req.id} disabled={Req.disableButton}/>
 										</div>
 									</td>
 									<td>
@@ -173,17 +173,18 @@
 										<lightning-button-icon variant="brand" size="large" icon-name="action:approval"
 											alternative-text="Approve" onclick={showModalApprovalBox}
 											data-value={Req.EMS_LM_Status__c} key-field={Req.Id} data-record-id={Req.Id}
-											data-id={Req.Id}></lightning-button-icon>
+											data-id={Req.Id} disabled={Req.disableButton}></lightning-button-icon>
 										&nbsp;&nbsp;
 										<lightning-button-icon variant="brand" size="large" icon-name="action:reject"
 											alternative-text="Reject" onclick={showModalRejectBox}
 											data-value={Req.EMS_LM_Status__c} key-field={Req.Id} data-record-id={Req.Id}
-											data-id={Req.Id}></lightning-button-icon>
+											data-id={Req.Id} disabled={Req.disableButton}></lightning-button-icon>
 										&nbsp;&nbsp;
 										<lightning-button-icon variant="brand" size="large"
 											icon-name="utility:cancel_file_request" alternative-text="Cancel"
 											onclick={handleCancel} data-value={Req.EMS_LM_Status__c} key-field={Req.Id}
-											data-record-id={Req.Id} data-id={Req.Id}></lightning-button-icon>
+											data-record-id={Req.Id} data-id={Req.Id} disabled={Req.disableCancelButton}>
+										</lightning-button-icon>
 									</td>
 								</tr>
 							</template>
@@ -208,10 +209,9 @@
 
 				<!-- modal body start -->
 				<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-					<p style="font-size:20px;">Please Enter the Approve Comments</p><br>
-					<lightning-textarea name="input" required value="" placeholder="Type comments here..."
-						label="Comments" maxlength="140"
-						message-when-too-long="A maximum of 140 characters are allowed."
+					<p style="font-size:20px;">Please enter the approval comments</p><br>
+					<lightning-textarea name="input" value="" placeholder="Type comments here..." label="Comments"
+						maxlength="140" message-when-too-long="A maximum of 140 characters are allowed."
 						message-when-value-missing="Please add comments." onchange={handleApproveAllComments}>
 					</lightning-textarea>
 				</div>
@@ -242,13 +242,16 @@
 
 				<!-- modal body start -->
 				<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
-					<p style="font-size:20px;">Please Enter the Reject Comments</p><br>
+					<p style="font-size:20px;">Please enter the rejection comments</p><br>
 					<lightning-textarea name="input" required value={rejectComments} placeholder="Type comments here..."
 						label="Comments" maxlength="140"
 						message-when-too-long="A maximum of 140 characters are allowed."
 						message-when-value-missing="Please add comments." onchange={handleRejectAllComments}
 						class="isRequired" data-id="validateValue">
 					</lightning-textarea>
+					<template if:true={errorMessage}>
+						<div class="slds-text-color_error">{errorMessage}</div>
+					</template>
 				</div>
 
 				<!-- modal footer start-->
@@ -277,10 +280,9 @@
 
 				<!-- modal body start -->
 				<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-3">
-					<p style="font-size:20px;">Please Enter the Approve Comments</p><br>
-					<lightning-textarea name="input" required value="" placeholder="Type comments here..."
-						label="Comments" maxlength="140"
-						message-when-too-long="A maximum of 140 characters are allowed."
+					<p style="font-size:20px;">Please enter the approval comments</p><br>
+					<lightning-textarea name="input" value="" placeholder="Type comments here..." label="Comments"
+						maxlength="140" message-when-too-long="A maximum of 140 characters are allowed."
 						message-when-value-missing="Please add comments." onchange={handleApproveComments}>
 					</lightning-textarea>
 				</div>
@@ -310,13 +312,16 @@
 
 				<!-- modal body start -->
 				<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-4">
-					<p style="font-size:20px;">Please Enter the Reject Comments</p><br>
+					<p style="font-size:20px;">Please enter the rejection comments</p><br>
 					<lightning-textarea name="input" required value={rejectComments} placeholder="Type comments here..."
 						label="Comments" maxlength="140"
 						message-when-too-long="A maximum of 140 characters are allowed."
 						message-when-value-missing="Please add comments." onchange={handleRejectComments}
 						class="isRequired" data-id="validateValue">
 					</lightning-textarea>
+					<template if:true={errorMessage}>
+						<div class="slds-text-color_error">{errorMessage}</div>
+					</template>
 				</div>
 				<!-- modal footer start-->
 				<footer class="slds-modal__footer">
@@ -331,6 +336,6 @@
 		<div key={Req.Id} class="slds-backdrop slds-backdrop_open"></div>
 	</template>
 	<template if:true={nodata}>
-		<h2> No requests found </h2>
+		<center> No requests found </center>
 	</template>
 </template>
